--- a/style.css
+++ b/style.css
@@ -6,14 +6,17 @@
 	font-weight: 400;
 	src: local('Baskerville Serial Black'), local('Baskerville Serial Black'), url(resources/baskerville.woff) format('woff');
 }
+
 html, body {
 	overflow-x: hidden !important;
 }
+
 html * {
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
 }
+
 body {
 	margin: 0;
 	padding: 0;
@@ -21,13 +24,20 @@ body {
 	font-size: 1.5em;
 	width: 100%;
 }
+
 a {
 	color: #FFFFFF;
 }
+
 a:hover {
 	color: rgba(255,255,255,.6);
 }
 
+.v-align { /* Align items vertically and horizontally as well (Used in the carousel-cells) */
+	display: flex !important;
+	align-items: center !important;
+	justify-content: center !important;
+}
 /* TITLES */
 
 h1 {
@@ -41,7 +51,7 @@ h3, h4, h5, h6 {
 
 /* SECTIONS GENERAL */
 
-.full { /* All sections */
+.full { /* All sections - Expand the page to full height minimum and align items vertically */
 	color: #FFFFFF;
 	text-align: center;
 	min-height: 100%;
@@ -49,7 +59,7 @@ h3, h4, h5, h6 {
 	display: flex;
 	align-items: center;
 }
-.band { /* Separator sections */
+.band { /* Separator sections - Special title separators (Not used rn) */
 	color: #FFFFFF;
 	text-align: center;
 	min-height: 20%;
@@ -65,14 +75,17 @@ h3, h4, h5, h6 {
 	background: url(resources/pink.svg) no-repeat fixed;
 	background-size: 100% 100%;
 }
+
 .blue {
 	background: url(resources/blue.svg) no-repeat fixed;
 	background-size: 100% 100%;
 }
+
 .lilac {
 	background: url(resources/lilac.svg) no-repeat fixed;
 	background-size: 100% 100%;
 }
+
 .tangerine {
 	background: url(resources/tangerine.svg) no-repeat fixed;
 	background-size: 100% 100%;
@@ -91,6 +104,7 @@ h3, h4, h5, h6 {
 }
 
 /* PROJECT SECTION CONTENT*/
+
 .description {
 	background-color: rgba(255,255,255,0.2); 
 	text-align: left; 
@@ -99,21 +113,56 @@ h3, h4, h5, h6 {
 	margin-left: 2vw;
 	margin-right: 2vw;
 }
+
 .details {
 	margin-top: 3vh; 
 	text-align: center; 
 }
 
-/* CAROUSEL */
+/* CAROUSEL (default laptop version) */
 
-@media only screen and (max-width: 640px) { /* FOR SMALL DEVICES */
+.flex-row { /* Display items in a row */
+	min-height: 100%; 
+	height: 100%; 
+	width: 100%;
+	display: flex; 
+	align-items: center;
+}
+
+.carousel {
+	height: 90%;
+}
+
+.carousel-cell {
+	width: 100%;
+	height: 100%;
+}
+
+.expand-height {
+	height: 100vh !important;
+}
+
+.expand-width {
+	width: 100vw !important;
+}
+
+.hImg,.wImg { /* For laptops with huge height & width we don't discriminate between h and w */
+	height: 100%; 
+	width: auto;
+}
+
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 640px) { /* FOR PHONES */
 	h1 {
 		font-size: 20vw;
 	}
+	
 	.name {
 		font-size: 15vw !important;
 	}
-	.no-extra {
+	
+	.no-extra { /* Padding and margins are abandonned in the small screen */
 		padding: 0 !important;
 		margin: 0 !important;
 	}
@@ -130,31 +179,47 @@ h3, h4, h5, h6 {
 		width: 100vw;
 	}
 
-	.height-first {
-		height: 95vh;
+	.pink,.blue,.lilac,.tangerine{ /* We don't want the full images either */
+		background-size: 800% 100%;
 	}
-	.width-first {
-		width: 100vw;
-		height: 45vh;
+
+	.flex-row { /* We abandon the flex design for a simple column display */
+		display: block !important;
+		margin: 0 !important;
+		padding: 0 !important;
 	}
+
+	.expand-height { /* We don't expand the height either bc the difference btw h and w is huge*/
+		height: auto !important;
+		padding: 0 !important;
+	}
+
 	.carousel-cell {
 		width: 100%;
 		height: 100%;
 	}
-	.hImg {
-		height: 100%; 
-		width: auto;
+
+	.height-first {
+		height: 95vh;
 	}
-	.wImg {
-		width: 100%;
-		height: auto;
+
+	.width-first {
+		width: 100vw;
+		height: 50vh;
 	}
-	.pink,.blue,.lilac,.tangerine{
-		background-size: 800% 100%;
+
+	.hImg { /* Auto-sizing to adapt the phone screen */
+		height: 100% !important; 
+		width: auto !important;
+	}
+
+	.wImg { /* Auto-sizing to adapt the phone screen */
+		width: 100% !important;
+		height: auto !important;
 	}
 }
-@media only screen and (min-width: 640px) and (max-width: 1600px) { /* FOR LAPTOPS */ 
 
+@media only screen and (min-width: 641px) and (max-width: 1366px) { /*FOR TABLETS */
 	.flex-row {
 		min-height: 100%; 
 		height: 100%; 
@@ -175,8 +240,12 @@ h3, h4, h5, h6 {
 		width: 100%;
 		height: 100%;
 	}
-	.hImg,.wImg {
-		height: 100%; 
-		width: auto;
+	.wImg {
+		width: 100% !important;
+		height: auto !important;
+	}
+	.hImg {
+		height: 100% !important; 
+		width: auto !important;
 	}
 }
