--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ h3, h4, h5, h6 {
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 640px) { /* FOR PHONES */
+@media only screen and (max-width: 640px) and (orientation: portrait) { /* FOR PHONES */
 	h1 {
 		font-size: 20vw;
 	}
@@ -219,7 +219,7 @@ h3, h4, h5, h6 {
 	}
 }
 
-@media only screen and (min-width: 641px) and (max-width: 1366px) { /*FOR TABLETS */
+@media only screen and (min-width: 641px) and (max-width: 1366px) and (orientation: landscape) { /*FOR TABLETS */
 	.flex-row {
 		min-height: 100%; 
 		height: 100%; 
